@@ -106,10 +106,6 @@ class TestMeshExportUtils(TestCase):
                     if len(vertex.groups) > 1:
                         vertex.groups[1].weight = 0.0
 
-        for inf in mesh.vert_infs:
-            inf.bone_inf = 1.0
-            inf.xtra_inf = 0.0
-
         with (patch.object(self, 'warning')) as report_func:
             retrieve_meshes(self, hierarchy, rig, 'container_name')
             for mesh_object in meshes:
@@ -117,6 +113,35 @@ class TestMeshExportUtils(TestCase):
                     if vertex.groups:
                         report_func.assert_any_call(
                             f'mesh \'{mesh_object.name}\' vertex {i} both bone weights where 0!')
+
+    def test_retrieve_meshes_with_bone_weights_not_adding_up_to_100_percent(self):
+        coll = get_collection()
+        mesh = get_mesh(skin=True)
+        create_mesh(self, mesh, coll)
+
+        hierarchy = get_hierarchy()
+        rig = get_or_create_skeleton(hierarchy, coll)
+
+        rig_mesh(mesh, hierarchy, rig)
+
+        meshes = [obj for obj in bpy.context.scene.objects if obj.type == 'MESH']
+        for mesh_object in meshes:
+            for i, vertex in enumerate(mesh_object.data.vertices):
+                vertex.groups
+                if vertex.groups:
+                    if len(vertex.groups) > 1:
+                        vertex.groups[0].weight = 0.4
+                        vertex.groups[1].weight = 0.4
+                    else:
+                        vertex.groups[0].weight = 1.0
+
+        with (patch.object(self, 'warning')) as report_func:
+            retrieve_meshes(self, hierarchy, rig, 'container_name')
+            for mesh_object in meshes:
+                for i, vertex in enumerate(mesh_object.data.vertices):
+                    if vertex.groups and len(vertex.groups) > 1:
+                        report_func.assert_any_call(
+                            f'mesh \'{mesh_object.name}\' vertex {i} both bone weights did not add up to 100%!')
 
     def test_retrieve_meshes_with_vertices_not_rigged_to_any_bone(self):
         coll = get_collection()
